Update JDK 21 to 25 and remove string template code